# cups-messenger

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE.md  NONEMBASSY.md  README.md  build.sh  config_spec.yaml  docker_entrypoint.sh  instructions.md  manifest.yaml  nonembassy.Dockerfile  pack.sh
assets/: httpd.conf
src/: db.rs  delete.rs  main.rs  message.rs  query.rs  util.rs  wire.rs
src/migrations/: mod.rs
