[package]
name = "cups"
version = "0.2.0"
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.1", features = ["socks"] }
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13.2"
hyper-tls = "0.4.1"
rusqlite = { version = "0.21.0", features = ["bundled", "blob", "uuid"] }
failure = "0.1.6"
lazy_static = "1.4.0"
ed25519-dalek = "1.0.0-pre.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.11"
serde_urlencoded = "0.6.1"
base32 = "0.4.0"
sha3 = "0.8.2"
futures = "0.3.4"
base64 = "0.11.0"
uuid = "0.8.1"
parking_lot = "0.10.0"