[package]
name = "cups"
version = "0.3.7"
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base32 = "0.4.0"
base64 = "0.12.3"
ed25519-dalek = "1.0.1"
failure = "0.1.8"
futures = "0.3.5"
hyper = "0.13.7"
hyper-tls = "0.4.3"
lazy_static = "1.4.0"
parking_lot = "0.11.0"
tokio = { version = "0.2", features = ["full"] }
r2d2 = "0.8.9"
r2d2_sqlite = "0.16.0"
reqwest = { version = "0.10.8", features = ["socks"] }
rusqlite = { version = "0.23.1", features = ["bundled", "blob", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.6.1"
serde_yaml = "0.8.13"
sha3 = "0.9.1"
uuid = "0.8.1"
openssl = { version="0.10.35", features=["vendored"] }
